test_suite/tests/compile-fail/macros/sm/empty-machine.rs
extern crate sm_macro;
use sm_macro::sm;

sm!{
    TurnStile {}
    //~^ ERROR unexpected end of input, expected identifier
}
